--- a/index.html
+++ b/index.html
@@ -4,11 +4,42 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="./styles.css">
   <title>Frontend Mentor | Four card feature section</title>
 </head>
 <body>
   <main>
-
+    <div class="main-container">
+      <div class="info-container">
+        <h1 class="title">Reliable, efficient delivery</h1>
+        <h1 class="title bold">Powered by Technology</h1>
+        <p class="title info">Our Artificial Intelligence powered tools use millions of project data points 
+          to ensure that your project is successful</p>
+      </div>
+      <div class="card supervisor">
+        <div class="card-title"><p>Supervisor</p></div>
+        <div class="card-info"><p>Monitors activity to identify project roadblocks</p></div>
+        <div class="card-image"><img src="./images/icon-supervisor.svg" alt=""></div>
+      </div>
+      <div class="card team-builder">
+        <div class="card-title"><p>Team Builder</p></div>
+        <div class="card-info"><p>Scans our talent network to create the optimal team for your project</p></div>
+        <div class="card-image"><img src="./images/icon-team-builder.svg" alt=""></div>
+      </div>
+      <div class="card calculator">
+        <div class="card-title"><p>Calculator</p></div>
+        <div class="card-info"><p>Uses data from past projects to provide better delivery estimates</p></div>
+        <div class="card-image"><img src="./images/icon-calculator.svg" alt=""></div>
+      </div>
+      <div class="card karma">
+        <div class="card-title"><p>Karma</p></div>
+        <div class="card-info"><p>Regularly evaluates our talent to ensure quality</p></div>
+        <div class="card-image"><img src="./images/icon-karma.svg" alt=""></div>
+      </div>
+    </div>
   </main>
   <footer>
     <p class="attribution">
