add links for cards

--- a/index.html
+++ b/index.html
@@ -22,22 +22,22 @@
       <div class="card supervisor">
         <div class="card-title"><p>Supervisor</p></div>
         <div class="card-info"><p>Monitors activity to identify project roadblocks</p></div>
-        <div class="card-image"><img src="./images/icon-supervisor.svg" alt=""></div>
+        <div class="card-image"><a href="#"><img src="./images/icon-supervisor.svg" alt=""></a></div>
       </div>
       <div class="card team-builder">
         <div class="card-title"><p>Team Builder</p></div>
         <div class="card-info"><p>Scans our talent network to create the optimal team for your project</p></div>
-        <div class="card-image"><img src="./images/icon-team-builder.svg" alt=""></div>
+        <div class="card-image"><a href="#"><img src="./images/icon-team-builder.svg" alt=""></a></div>
       </div>
       <div class="card calculator">
         <div class="card-title"><p>Calculator</p></div>
         <div class="card-info"><p>Uses data from past projects to provide better delivery estimates</p></div>
-        <div class="card-image"><img src="./images/icon-calculator.svg" alt=""></div>
+        <div class="card-image"><a href="#"><img src="./images/icon-calculator.svg" alt=""></a></div>
       </div>
       <div class="card karma">
         <div class="card-title"><p>Karma</p></div>
         <div class="card-info"><p>Regularly evaluates our talent to ensure quality</p></div>
-        <div class="card-image"><img src="./images/icon-karma.svg" alt=""></div>
+        <div class="card-image"><a href="#"><img src="./images/icon-karma.svg" alt=""></a></div>
       </div>
     </div>
   </main>
